argo/dev/apps/trilium/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app trilium
  namespace: trilium
  labels:
    app.kubernetes.io/name: *app
spec:
  serviceName: *app
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      # container requires root to launch and then run as node user 1000
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 1000
      containers:
        - name: *app
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - SETUID
                - SETGID
                - CHOWN
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: true
          image: zadam/trilium:0.59-latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: trilium-data
              mountPath: *datadir
      volumes:
        - name: trilium-data
          persistentVolumeClaim:
            claimName: trilium-data
