argo/dev/apps/trilium/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium-service
  namespace: trilium
spec:
  selector:
    app: trilium
  ports:
    - name: trilium
      port: 8080
